--- a/src/components/aboutUs/AboutUs.module.scss
+++ b/src/components/aboutUs/AboutUs.module.scss
@@ -1,3 +1,64 @@
-.main{
+.main {
   padding: 77px 0 85px 0;
+  position: relative;
+
+}
+
+.photo {
+  position: absolute;
+  top: 0;
+  left: -137px;
+  @media only screen and (min-width: 1330px) and (max-width: 1430px) {
+    & {
+      left: -90px;
+    }
+  }
+  @media only screen and (min-width: 1330px) and (max-width: 1330px) {
+    & {
+      left: -40px;
+    }
+  }
+  @media only screen and (min-width: 1230px) and (max-width: 1330px) {
+    & {
+      left: 0;
+    }
+  }
+}
+
+.content {
+  max-width: 485px;
+}
+
+.aboutUsWrapper {
+  display: flex;
+  justify-content: end;
+  position: relative;
+}
+
+.title {
+  position: relative;
+  z-index: 2;
+  font-family: 'Open Sans',sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 130%;
+  margin-top: 178px;
+}
+
+.description {
+  position: relative;
+  z-index: 2;
+  font-family: 'Open Sans',sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 160%;
+  opacity: 0.7;
+  margin: 35px 0 60px 0;
+}
+.btns {
+  position: relative;
+  z-index: 2;
+  margin-bottom: 257px;
 }
