--- a/src/components/scrollToStart/ScrollToStart.module.scss
+++ b/src/components/scrollToStart/ScrollToStart.module.scss
@@ -1,9 +1,19 @@
 @import "/src/styles/vars";
 .main{
   position: fixed;
-  right: 20px;
-  bottom: 20px;
+  right: 40px;
+  bottom: 40px;
   background-color: white;
   color: $default-color;
   z-index: 100;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  & > a {
+
+    & > img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
