--- a/src/components/UIkit/select/Select.module.scss
+++ b/src/components/UIkit/select/Select.module.scss
@@ -62,6 +62,7 @@ div > .header_active_up {
 }
 
 div > .opened_menu_up_pos {
+
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   border-bottom-right-radius: unset;
@@ -75,5 +76,9 @@ div > .opened_menu_up_pos_header {
 
 div > .closed_menu {
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.2) 7px 6px 5px, rgba(0, 0, 0, 0.2) -4px 6px 5px,rgba(0, 0, 0, 0.2) 0 -4px 5px;
+  box-shadow: rgba(0, 0, 0, 0.2) 7px 6px 5px, rgba(0, 0, 0, 0.2) -4px 6px 5px, rgba(0, 0, 0, 0.2) 0 -4px 5px;
+}
+
+div > .menu_up_pos {
+  bottom: 100%;
 }
