--- a/src/components/UIkit/select/SelectMenu/SelectMenu.module.scss
+++ b/src/components/UIkit/select/SelectMenu/SelectMenu.module.scss
@@ -17,20 +17,18 @@
   border-bottom-right-radius: 8px;
   border-bottom-left-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.2) 7px 6px 5px,rgba(0, 0, 0, 0.2) -4px 6px 5px;
-}
-.main::-webkit-scrollbar {
-  width: 8px;
-  border: 3px solid black     /* the width of the entire scrollbar */
-}
-.main::-webkit-scrollbar-track {
-  background-color: #F9F9FD;
-  -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
-}
-.main::-webkit-scrollbar-track {
-  background: #F4F4F4;        /* tracking zone color */
-}
-.main::-webkit-scrollbar-thumb {
-  background-color: grey;    /* slider color */
-  border: 2px solid #F4F4F4;  /* margin around slider */
-  border-radius: 20px;       /* rounded runner */
+
+  &::-webkit-scrollbar {
+    width: 8px;
+    border: 3px solid black     /* the width of the entire scrollbar */
+  }
+  &::-webkit-scrollbar-track {
+    background-color: #F9F9FD;
+    -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: grey;    /* slider color */
+    border: 2px solid #F4F4F4;  /* margin around slider */
+    border-radius: 20px;       /* rounded runner */
+  }
 }
