refactor: code style feat: added mobile version

--- a/src/components/AboutUs/AboutUs.module.scss
+++ b/src/components/AboutUs/AboutUs.module.scss
@@ -2,71 +2,103 @@
   position: relative;
   padding: 77px 0 85px 0;
 
-}
+  > .aboutUsWrapper {
+    position: relative;
+    display: flex;
+    justify-content: end;
 
-.photo {
-  position: absolute;
-  top: 0;
-  left: -137px;
+    > .photo {
+      position: absolute;
+      top: 0;
+      left: -137px;
 
-  @media only screen and (min-width: 1330px) and (max-width: 1430px) {
-    & {
-      left: -90px;
+      @media only screen and (min-width: 1330px) and (max-width: 1430px) {
+        & {
+          left: -90px;
+        }
+      }
+
+      @media only screen and (min-width: 1330px) and (max-width: 1330px) {
+        & {
+          left: -40px;
+        }
+      }
+
+      @media only screen and (min-width: 1230px) and (max-width: 1330px) {
+        & {
+          left: 0;
+        }
+      }
+    }
+
+    > .content {
+      max-width: 485px;
+
+      > .title {
+        position: relative;
+        z-index: 2;
+
+        margin-top: 178px;
+
+        font-family: 'Open Sans', sans-serif;
+        font-size: 40px;
+        font-weight: 700;
+        font-style: normal;
+        line-height: 130%;
+      }
+
+      > .description {
+        position: relative;
+        z-index: 2;
+
+        margin: 35px 0 60px 0;
+
+        font-family: 'Open Sans', sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+        font-style: normal;
+        line-height: 160%;
+
+        opacity: 0.7;
+      }
+
+      > .btns {
+        position: relative;
+        z-index: 2;
+        margin-bottom: 257px;
+      }
     }
   }
 
-  @media only screen and (min-width: 1330px) and (max-width: 1330px) {
+  @media only screen and (min-width: 0) and (max-width: 927px) {
     & {
-      left: -40px;
+
+      > .aboutUsWrapper {
+
+        > .photo {
+          display: none;
+        }
+
+        > .content {
+          max-width: unset;
+          justify-content: center;
+          text-align: center;
+
+          > .title {
+            margin-top: 10px;
+          }
+
+          > .btns {
+            margin-bottom: 10px;
+          }
+        }
+      }
     }
   }
-
-  @media only screen and (min-width: 1230px) and (max-width: 1330px) {
-    & {
-      left: 0;
-    }
-  }
 }
 
-.content {
-  max-width: 485px;
-}
 
-.aboutUsWrapper {
-  position: relative;
-  display: flex;
-  justify-content: end;
-}
 
-.title {
-  position: relative;
-  z-index: 2;
 
-  margin-top: 178px;
 
-  font-family: 'Open Sans',sans-serif;
-  font-size: 40px;
-  font-weight: 700;
-  font-style: normal;
-  line-height: 130%;
-}
 
-.description {
-  position: relative;
-  z-index: 2;
-
-  margin: 35px 0 60px 0;
-
-  font-family: 'Open Sans',sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  font-style: normal;
-  line-height: 160%;
-
-  opacity: 0.7;
-}
-.btns {
-  position: relative;
-  z-index: 2;
-  margin-bottom: 257px;
-}
