--- a/src/components/Footer/FooterLinksItem/FooterLinksItem.module.scss
+++ b/src/components/Footer/FooterLinksItem/FooterLinksItem.module.scss
@@ -1,35 +1,37 @@
 @import "/src/styles/vars";
 @import "/src/styles/fonts.scss";
 
-.main{
+.main {
 
-}
-.title{
-  margin-top: 20px;
-  margin-bottom: 32px;
+  > .title {
+    margin-top: 20px;
+    margin-bottom: 32px;
 
-  font-family: "CircularStd", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: normal;
-  line-height: 20px;
-}
-
-.links{
-  display: flex;
-  flex-direction: column;
-  & > a {
-    font-family: 'CircularStd', sans-serif;
-    font-size: 14px;
-    font-weight: 450;
+    font-family: "CircularStd", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
     font-style: normal;
-    line-height: 18px;
-    color: $default-color;
-    text-decoration: none;
+    line-height: 20px;
+  }
 
-    opacity: 0.6;
+  > .links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    & > .item {
+      font-family: 'CircularStd', sans-serif;
+      font-size: 14px;
+      font-weight: 450;
+      font-style: normal;
+      line-height: 18px;
+      color: $default-color;
+      text-decoration: none;
+      opacity: 0.6;
+    }
+
   }
-  & > a:not(:last-child) {
-    margin-bottom: 20px;
-  }
+
 }
+
+
