--- a/src/components/Header/HeaderNav/HeaderNav.module.scss
+++ b/src/components/Header/HeaderNav/HeaderNav.module.scss
@@ -9,4 +9,16 @@
     text-decoration: none;
   }
 
+  @media only screen and (min-width: 0px) and (max-width: 410px) {
+    & {
+      gap: 30px;
+    }
+  }
+
+  @media only screen and (min-width: 0px) and (max-width: 347px) {
+    & {
+      gap: 20px;
+    }
+  }
+
 }
