--- a/src/components/Footer/FooterFirstBlock/FooterFirstBlock.module.scss
+++ b/src/components/Footer/FooterFirstBlock/FooterFirstBlock.module.scss
@@ -41,6 +41,11 @@
       display: flex;
       align-items: center;
 
+      > .link {
+        text-decoration: none;
+        color: $default-color;
+      }
+
       > .img {
         margin-right: 9px;
       }
