--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -14,6 +14,10 @@
   > .textMain {
     display: flex;
     align-items: center;
+
+    &:hover{
+      opacity: 0.7;
+    }
   }
 
   &.defaultButton {
